Checked and updated notebooks

--- a/notebooks/TimeFunctions/times.ipynb
+++ b/notebooks/TimeFunctions/times.ipynb
@@ -32,24 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "122f2da1-b6c9-4010-b9e3-75dbe86ac2f1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.185924Z",
+     "start_time": "2024-08-22T13:46:08.167974Z"
+    }
+   },
+   "source": [
+    "import importlib.metadata\n",
+    "from datetime import datetime\n",
+    "\n",
+    "version_diive = importlib.metadata.version(\"diive\")\n",
+    "print(f\"diive version: v{version_diive}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.74.0\n"
+      "diive version: v0.79.0\n"
      ]
     }
    ],
-   "source": [
-    "from datetime import datetime\n",
-    "import importlib.metadata\n",
-    "version_diive = importlib.metadata.version(\"diive\")\n",
-    "print(f\"diive version: v{version_diive}\")"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -64,25 +70,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "a02fa159-3a48-43aa-9aaa-e2f471e7b2dd",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.310886Z",
+     "start_time": "2024-08-22T13:46:08.301737Z"
+    }
+   },
+   "source": [
+    "from diive.core.times.times import current_unixtime\n",
+    "\n",
+    "current_unixtime()"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1713616745910832400"
+       "1724334368303732800"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from diive.core.times.times import current_unixtime\n",
-    "current_unixtime()"
-   ]
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -94,25 +106,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "20a61333-9d40-4695-ab5b-7401512d4c8e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.451923Z",
+     "start_time": "2024-08-22T13:46:08.430979Z"
+    }
+   },
+   "source": [
+    "from diive.core.times.times import current_datetime\n",
+    "\n",
+    "a, b = current_datetime()\n",
+    "print(f\"Current datetime as datetime: {a}\")\n",
+    "print(f\"Current datetime as string: {b}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current datetime as datetime: 2024-04-20 14:39:05.919807\n",
-      "Current datetime as string: 2024-04-20 14:39:05\n"
+      "Current datetime as datetime: 2024-08-22 15:46:08.434993\n",
+      "Current datetime as string: 2024-08-22 15:46:08\n"
      ]
     }
    ],
-   "source": [
-    "from diive.core.times.times import current_datetime\n",
-    "a, b = current_datetime()\n",
-    "print(f\"Current datetime as datetime: {a}\")\n",
-    "print(f\"Current datetime as string: {b}\")"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -125,25 +143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "d46e6ac3-5183-4741-bd0b-b397b110ca24",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.545068Z",
+     "start_time": "2024-08-22T13:46:08.529960Z"
+    }
+   },
+   "source": [
+    "from diive.core.times.times import current_datetime_str_condensed\n",
+    "\n",
+    "current_datetime_str_condensed()"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20240420143905'"
+       "'20240822154608'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from diive.core.times.times import current_datetime_str_condensed\n",
-    "current_datetime_str_condensed()"
-   ]
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -156,25 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "010feca7-6430-44be-8851-b04540a574d1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.591914Z",
+     "start_time": "2024-08-22T13:46:08.578948Z"
+    }
+   },
+   "source": [
+    "from diive.core.times.times import current_time_microseconds_str\n",
+    "\n",
+    "current_time_microseconds_str()"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'143905952000'"
+       "'154608579946'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from diive.core.times.times import current_time_microseconds_str\n",
-    "current_time_microseconds_str()"
-   ]
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -187,46 +217,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "70799633-ef8b-4d0c-872b-a4f86760b539",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.654019Z",
+     "start_time": "2024-08-22T13:46:08.634043Z"
+    }
+   },
+   "source": [
+    "from diive.core.times.times import make_run_id\n",
+    "\n",
+    "make_run_id()"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'RUN-20240420-143905'"
+       "'RUN-20240822-154608'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from diive.core.times.times import make_run_id\n",
-    "make_run_id()"
-   ]
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "2c41cf9d-3d57-4cbb-8c15-66cb7d01d7fe",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.715838Z",
+     "start_time": "2024-08-22T13:46:08.701846Z"
+    }
+   },
+   "source": [
+    "make_run_id(prefix=\"MYSCRIPT\")"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MYSCRIPT-20240420-143905'"
+       "'MYSCRIPT-20240822-154608'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "make_run_id(prefix=\"MYSCRIPT\")"
-   ]
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -240,32 +281,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "3f784457-e244-421b-b789-08481c2d9f9f",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.776866Z",
+     "start_time": "2024-08-22T13:46:08.763875Z"
+    }
    },
+   "source": [
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-04-20 14:39:05\n"
+      "Finished 2024-08-22 15:46:08\n"
      ]
     }
    ],
-   "source": [
-    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "print(f\"Finished {dt_string}\")"
-   ]
+   "execution_count": 16
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1fe40c15-b07c-4e8c-b6be-dc6a2060aa71",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:08.837763Z",
+     "start_time": "2024-08-22T13:46:08.824714Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
