--- a/notebooks/TimeStamps/Detect_time_resolution.ipynb
+++ b/notebooks/TimeStamps/Detect_time_resolution.ipynb
@@ -36,31 +36,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
+    "tags": [],
     "ExecuteTime": {
-     "end_time": "2023-04-23T13:13:22.306270Z",
-     "start_time": "2023-04-23T13:13:20.453340Z"
-    },
-    "tags": []
+     "end_time": "2024-08-22T13:46:15.036834Z",
+     "start_time": "2024-08-22T13:46:12.458429Z"
+    }
    },
+   "source": [
+    "import importlib.metadata\n",
+    "from datetime import datetime\n",
+    "\n",
+    "from diive.configs.exampledata import load_exampledata_parquet\n",
+    "from diive.core.times.times import DetectFrequency\n",
+    "\n",
+    "version_diive = importlib.metadata.version(\"diive\")\n",
+    "print(f\"diive version: v{version_diive}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.74.0\n"
+      "diive version: v0.79.0\n"
      ]
     }
    ],
-   "source": [
-    "import importlib.metadata\n",
-    "from datetime import datetime\n",
-    "from diive.configs.exampledata import load_exampledata_parquet\n",
-    "from diive.core.times.times import DetectFrequency\n",
-    "version_diive = importlib.metadata.version(\"diive\")\n",
-    "print(f\"diive version: v{version_diive}\")"
-   ]
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -71,30 +73,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-23T13:13:22.447247Z",
-     "start_time": "2023-04-23T13:13:22.309261Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.255108Z",
+     "start_time": "2024-08-22T13:46:15.062796Z"
+    }
    },
+   "source": [
+    "data_df = load_exampledata_parquet()"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.052 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.079 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     }
    ],
-   "source": [
-    "data_df = load_exampledata_parquet()"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -105,18 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-23T13:13:22.509345Z",
-     "start_time": "2023-04-23T13:13:22.449242Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.366328Z",
+     "start_time": "2024-08-22T13:46:15.335896Z"
+    }
    },
+   "source": [
+    "f = DetectFrequency(index=data_df.index, verbose=True)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -132,9 +136,7 @@
      ]
     }
    ],
-   "source": [
-    "f = DetectFrequency(index=data_df.index, verbose=True)"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -145,18 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-23T13:13:22.527966Z",
-     "start_time": "2023-04-23T13:13:22.464985Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.445633Z",
+     "start_time": "2024-08-22T13:46:15.435146Z"
+    }
    },
+   "source": [
+    "freq = f.get()\n",
+    "freq"
+   ],
    "outputs": [
     {
      "data": {
@@ -169,10 +174,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "freq = f.get()\n",
-    "freq"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -185,30 +187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.555853Z",
+     "start_time": "2024-08-22T13:46:15.547875Z"
+    }
    },
+   "source": [
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-04-20 14:34:11\n"
+      "Finished 2024-08-22 15:46:15\n"
      ]
     }
    ],
-   "source": [
-    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "print(f\"Finished {dt_string}\")"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:46:15.648897Z",
+     "start_time": "2024-08-22T13:46:15.636640Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
