--- a/notebooks/Analyses/GapFinder.ipynb
+++ b/notebooks/Analyses/GapFinder.ipynb
@@ -72,33 +72,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "98a0b6ed-8f83-4519-b23f-a13453dff0a1",
    "metadata": {
+    "tags": [],
     "ExecuteTime": {
-     "end_time": "2023-06-16T13:49:19.262416Z",
-     "start_time": "2023-06-16T13:49:19.240475Z"
-    },
-    "tags": []
+     "end_time": "2024-08-22T14:07:25.069717Z",
+     "start_time": "2024-08-22T14:07:22.560523Z"
+    }
    },
+   "source": [
+    "import importlib.metadata\n",
+    "import warnings\n",
+    "from datetime import datetime\n",
+    "\n",
+    "from diive.configs.exampledata import load_exampledata_parquet\n",
+    "from diive.pkgs.analyses.gapfinder import GapFinder\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "version_diive = importlib.metadata.version(\"diive\")\n",
+    "print(f\"diive version: v{version_diive}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.74.0\n"
+      "diive version: v0.79.0\n"
      ]
     }
    ],
-   "source": [
-    "import importlib.metadata\n",
-    "from datetime import datetime\n",
-    "from diive.pkgs.analyses.gapfinder import GapFinder\n",
-    "from diive.configs.exampledata import load_exampledata_parquet\n",
-    "\n",
-    "version_diive = importlib.metadata.version(\"diive\")\n",
-    "print(f\"diive version: v{version_diive}\")"
-   ]
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -118,9 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "f2b3d8ae-bf18-4376-bdee-69533e71a1f1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T14:07:25.303599Z",
+     "start_time": "2024-08-22T14:07:25.258432Z"
+    }
+   },
+   "source": [
+    "help(GapFinder)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -174,9 +184,7 @@
      ]
     }
    ],
-   "source": [
-    "help(GapFinder)"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -196,21 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "d6a8a136-b0da-44e5-989a-2f23e3109e79",
    "metadata": {
+    "tags": [],
     "ExecuteTime": {
-     "end_time": "2023-06-16T13:49:15.330985Z",
-     "start_time": "2023-06-16T13:49:15.165432Z"
-    },
-    "tags": []
+     "end_time": "2024-08-22T14:07:25.583017Z",
+     "start_time": "2024-08-22T14:07:25.395860Z"
+    }
    },
+   "source": [
+    "data_df = load_exampledata_parquet()\n",
+    "series = data_df['NEE_CUT_REF_orig']\n",
+    "series"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.058 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.089 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -236,11 +248,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "data_df = load_exampledata_parquet()\n",
-    "series = data_df['NEE_CUT_REF_orig']\n",
-    "series"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -260,16 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "0783bda1-e410-42f0-a4c6-be64000852e9",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T14:07:25.689446Z",
+     "start_time": "2024-08-22T14:07:25.661014Z"
+    }
    },
-   "outputs": [],
    "source": [
     "gf = GapFinder(series=series, limit=None, sort_results=True)\n",
     "gapfinder_df = gf.get_results()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -289,14 +301,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "c90d528e-9415-46d4-9eea-030c265e65f3",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T14:07:25.751281Z",
+     "start_time": "2024-08-22T14:07:25.738314Z"
+    }
    },
+   "source": [
+    "gapfinder_df"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "                            GAP_START             GAP_END  GAP_LENGTH\n",
+       "IS_NUMERIC_CUMSUM                                                    \n",
+       "30027             2018-03-06 19:15:00 2018-04-30 15:15:00        2633\n",
+       "21932             2016-09-12 16:15:00 2016-09-22 09:45:00         468\n",
+       "48475             2021-05-18 16:15:00 2021-05-25 13:45:00         332\n",
+       "31041             2018-06-19 22:45:00 2018-06-26 10:45:00         313\n",
+       "5204              2013-11-22 13:15:00 2013-11-28 09:45:00         282\n",
+       "...                               ...                 ...         ...\n",
+       "27640             2017-08-26 16:45:00 2017-08-26 16:45:00           1\n",
+       "16527             2015-10-29 15:45:00 2015-10-29 15:45:00           1\n",
+       "16528             2015-10-29 16:45:00 2015-10-29 16:45:00           1\n",
+       "16530             2015-10-29 22:15:00 2015-10-29 22:15:00           1\n",
+       "43046             2020-06-15 08:45:00 2020-06-15 08:45:00           1\n",
+       "\n",
+       "[15602 rows x 3 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -398,23 +433,6 @@
        "</table>\n",
        "<p>15602 rows × 3 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "                            GAP_START             GAP_END  GAP_LENGTH\n",
-       "IS_NUMERIC_CUMSUM                                                    \n",
-       "30027             2018-03-06 19:15:00 2018-04-30 15:15:00        2633\n",
-       "21932             2016-09-12 16:15:00 2016-09-22 09:45:00         468\n",
-       "48475             2021-05-18 16:15:00 2021-05-25 13:45:00         332\n",
-       "31041             2018-06-19 22:45:00 2018-06-26 10:45:00         313\n",
-       "5204              2013-11-22 13:15:00 2013-11-28 09:45:00         282\n",
-       "...                               ...                 ...         ...\n",
-       "27640             2017-08-26 16:45:00 2017-08-26 16:45:00           1\n",
-       "16527             2015-10-29 15:45:00 2015-10-29 15:45:00           1\n",
-       "16528             2015-10-29 16:45:00 2015-10-29 16:45:00           1\n",
-       "16530             2015-10-29 22:15:00 2015-10-29 22:15:00           1\n",
-       "43046             2020-06-15 08:45:00 2020-06-15 08:45:00           1\n",
-       "\n",
-       "[15602 rows x 3 columns]"
       ]
      },
      "execution_count": 5,
@@ -422,17 +440,23 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "gapfinder_df"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "8861b4a1-072f-41a1-85da-a64a34d22218",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T14:07:25.844847Z",
+     "start_time": "2024-08-22T14:07:25.829887Z"
+    }
    },
+   "source": [
+    "longestgap = gapfinder_df.iloc[0]\n",
+    "print(\n",
+    "    f\"The longest gap had a length of {longestgap['GAP_LENGTH']} missing records and was found between {longestgap['GAP_START']} and {longestgap['GAP_END']}.\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -442,18 +466,21 @@
      ]
     }
    ],
-   "source": [
-    "longestgap = gapfinder_df.iloc[0]\n",
-    "print(f\"The longest gap had a length of {longestgap['GAP_LENGTH']} missing records and was found between {longestgap['GAP_START']} and {longestgap['GAP_END']}.\")"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "7a273c65-f514-4e4e-85be-c2b0f2862047",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T14:07:25.906204Z",
+     "start_time": "2024-08-22T14:07:25.899225Z"
+    }
    },
+   "source": [
+    "print(f\"Here are the three longest gaps:\\n{gapfinder_df.head(3)}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -468,9 +495,7 @@
      ]
     }
    ],
-   "source": [
-    "print(f\"Here are the three longest gaps:\\n{gapfinder_df.head(3)}\")"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -492,32 +517,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "52d47c35-eda2-4bb5-9b2b-1faedb4fb43c",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2024-08-22T14:07:25.954083Z",
+     "start_time": "2024-08-22T14:07:25.944105Z"
+    }
    },
+   "source": [
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-04-21 10:22:05\n"
+      "Finished 2024-08-22 16:07:25\n"
      ]
     }
    ],
-   "source": [
-    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "print(f\"Finished {dt_string}\")"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "b9900f7d-1bd3-4aa3-bd9a-33a8e3557678",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T14:07:26.001507Z",
+     "start_time": "2024-08-22T14:07:25.988510Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
