Added rolling z-score notebook

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -265,7 +265,8 @@
     "- <b>NEW!</b> [Hampel filter separately for daytime and nighttime data](OutlierDetection/HampelDaytimeNighttime.ipynb)\n",
     "- <b>NEW!</b> [Trim data](OutlierDetection/TrimLow.ipynb)\n",
     "- <b>NEW!</b> [z-score](OutlierDetection/zScore.ipynb) \n",
-    "- <b>NEW!</b> [z-score separately on daytime and nighttime data](OutlierDetection/zScoreDaytimeNighttime.ipynb)"
+    "- <b>NEW!</b> [z-score separately on daytime and nighttime data](OutlierDetection/zScoreDaytimeNighttime.ipynb)\n",
+    "- <b>NEW!</b> [z-score in a rolling time window](OutlierDetection/zScoreRolling.ipynb)"
    ]
   },
   {
