--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 8 Sep 2024\n",
+    "**Last updated**: 16 Sep 2024\n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -290,6 +290,7 @@
    "id": "3f12e3ac-15eb-4dcb-bbbc-4652149b25d9",
    "metadata": {},
    "source": [
+    "- <b>NEW!</b> [Cumulative sums across all data](Plotting/Cumulative.ipynb)\n",
     "- <b>NEW!</b> [Cumulatives per year](Plotting/CumulativesPerYear.ipynb)\n",
     "- [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
     "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
