Updated long-term gap-filling notebook

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 19 Sep 2024  \n",
+    "**Last updated**: 20 Sep 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -191,6 +191,7 @@
     "- [Gap-filling with XGBoost, minimal example](GapFilling/XGBoostGapFillingMinimal.ipynb)\n",
     "- [Gap-filling with XGBoost, more extensive example](GapFilling/XGBoostGapFillingExtensive.ipynb)\n",
     "- [Gap-filling with random forest](GapFilling/RandomForestGapFilling.ipynb)\n",
+    "- <b>NEW!</b> [Long-term gap-filling with random forest](GapFilling/LongTermRandomForestGapFilling.ipynb)\n",
     "- [Linear interpolation](GapFilling/LinearInterpolation.ipynb)\n",
     "- [Quick gap-filling with random forest](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters\n",
     "- [Parameter optimization for random forest](GapFilling/RandomForestParamOptimization.ipynb)"
@@ -468,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
