--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 20 Sep 2024  \n",
+    "**Last updated**: 22 Sep 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -110,6 +110,7 @@
    "id": "8ceb3736-b947-4578-bbd5-0d106147cffd",
    "metadata": {},
    "source": [
+    "- <b>NEW!</b> [Find and correct offset between two time series](Corrections/MeasurementOffset.ipynb)\n",
     "- [Wind direction offset correction](Corrections/WindDirectionOffset.ipynb)"
    ]
   },
