--- a/notebooks/Corrections/MeasurementOffset.ipynb
+++ b/notebooks/Corrections/MeasurementOffset.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<span style='font-size:32px; display:block;'>\n",
     "<b>\n",
-    "    Wind direction offset correction¶\n",
+    "    Measurement offset correction¶\n",
     "</b>\n",
     "</span>"
    ]
