--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 22 Sep 2024  \n",
+    "**Last updated**: 30 Sep 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -189,13 +189,15 @@
    "id": "ec0b4ba4-f35a-4e3c-988e-83b79b70fec7",
    "metadata": {},
    "source": [
-    "- [Gap-filling with XGBoost, minimal example](GapFilling/XGBoostGapFillingMinimal.ipynb)\n",
-    "- [Gap-filling with XGBoost, more extensive example](GapFilling/XGBoostGapFillingExtensive.ipynb)\n",
-    "- [Gap-filling with random forest](GapFilling/RandomForestGapFilling.ipynb)\n",
-    "- <b>NEW!</b> [Long-term gap-filling with random forest](GapFilling/LongTermRandomForestGapFilling.ipynb)\n",
+    "\n",
     "- [Linear interpolation](GapFilling/LinearInterpolation.ipynb)\n",
-    "- [Quick gap-filling with random forest](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters\n",
-    "- [Parameter optimization for random forest](GapFilling/RandomForestParamOptimization.ipynb)"
+    "- <b>NEW!</b> [MDS gap-filling of ecosystem fluxes](GapFilling/FluxMDSGapFilling.ipynb): approach by [Reichstein et al., 2005](https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2005.001002.x)\n",
+    "- [Random forest parameter optimization](GapFilling/RandomForestParamOptimization.ipynb)\n",
+    "- [Random forest gap-filling](GapFilling/RandomForestGapFilling.ipynb)\n",
+    "- <b>NEW!</b> [Random forest long-term gap-filling](GapFilling/LongTermRandomForestGapFilling.ipynb)\n",
+    "- [Random forest quick gap-filling with ](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters\n",
+    "- [XGBoost gap-filling, minimal example](GapFilling/XGBoostGapFillingMinimal.ipynb)\n",
+    "- [XGBoost gap-filling, more extensive example](GapFilling/XGBoostGapFillingExtensive.ipynb)"
    ]
   },
   {
