Run notebooks with Python 3.11

--- a/notebooks/Analyses/CalculateZaggregatesInQuantileClassesOfXY.ipynb
+++ b/notebooks/Analyses/CalculateZaggregatesInQuantileClassesOfXY.ipynb
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.82.1\n"
+      "diive version: v0.83.2\n"
      ]
     }
    ],
@@ -113,51 +113,9 @@
      "start_time": "2024-08-22T14:05:35.140701Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class QuantileXYAggZ in module diive.pkgs.analyses.quantilexyaggz:\n",
-      "\n",
-      "class QuantileXYAggZ(builtins.object)\n",
-      " |  QuantileXYAggZ(x: pandas.core.series.Series, y: pandas.core.series.Series, z: pandas.core.series.Series, n_quantiles: int = 10, min_n_vals_per_bin: int = 1, binagg_z: Literal['mean', 'min', 'max', 'median', 'count'] = 'mean')\n",
-      " |  \n",
-      " |  Calculate z-aggregates in quantiles (classes) of x and y\n",
-      " |  \n",
-      " |  By default, x and y are binned into 10 classes (n_quantiles: int = 10) and\n",
-      " |  the mean of z is shown in each of the resulting 100 classes (10*10).\n",
-      " |  \n",
-      " |  The result is a pivoted dataframe and its longform.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, x: pandas.core.series.Series, y: pandas.core.series.Series, z: pandas.core.series.Series, n_quantiles: int = 10, min_n_vals_per_bin: int = 1, binagg_z: Literal['mean', 'min', 'max', 'median', 'count'] = 'mean')\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  run(self)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Readonly properties defined here:\n",
-      " |  \n",
-      " |  longformdf\n",
-      " |  \n",
-      " |  pivotdf\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(QuantileXYAggZ)"
+    "# help(QuantileXYAggZ)"
    ]
   },
   {
@@ -191,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.065 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.057 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -1889,7 +1847,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-09-19 18:08:39\n"
+      "Finished 2024-10-24 13:38:17\n"
      ]
     }
    ],
@@ -1928,7 +1886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.10"
   },
   "toc-autonumbering": false
  },
