--- a/notebooks/Analyses/GapFinder.ipynb
+++ b/notebooks/Analyses/GapFinder.ipynb
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.82.1\n"
+      "diive version: v0.83.2\n"
      ]
     }
    ],
@@ -129,61 +129,9 @@
      "start_time": "2024-08-22T14:07:25.258432Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class GapFinder in module diive.pkgs.analyses.gapfinder:\n",
-      "\n",
-      "class GapFinder(builtins.object)\n",
-      " |  GapFinder(series: pandas.core.series.Series, limit: int = None, sort_results: bool = True)\n",
-      " |  \n",
-      " |  Find gaps in Series\n",
-      " |  \n",
-      " |  Results are collected in a dataframe that gives info\n",
-      " |  about gap locations within the limit.\n",
-      " |  \n",
-      " |  - Example notebook available in:\n",
-      " |      notebooks/Analyses/GapFinder.ipynb\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, series: pandas.core.series.Series, limit: int = None, sort_results: bool = True)\n",
-      " |      Args:\n",
-      " |          series: Time series\n",
-      " |          limit: Only consider gaps <= limit\n",
-      " |          sort_results: Sort results by gap length, descending\n",
-      " |  \n",
-      " |  get_results(self) -> pandas.core.frame.DataFrame\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  gap_values = 'GAPVALUES'\n",
-      " |  \n",
-      " |  gaplen_below_limit_col = 'GAPLEN_BELOW_LIM'\n",
-      " |  \n",
-      " |  isgap_col = 'IS_GAP'\n",
-      " |  \n",
-      " |  isnumeric_col = 'IS_NUMERIC'\n",
-      " |  \n",
-      " |  isnumeric_cumsum_col = 'IS_NUMERIC_CUMSUM'\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(GapFinder)"
+    "# help(GapFinder)"
    ]
   },
   {
@@ -218,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.039 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.063 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -531,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-09-19 21:24:03\n"
+      "Finished 2024-10-24 13:40:17\n"
      ]
     }
    ],
@@ -570,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
