--- a/notebooks/Analyses/Percentiles.ipynb
+++ b/notebooks/Analyses/Percentiles.ipynb
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.82.1\n"
+      "diive version: v0.83.2\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d394b82d-fad4-4f52-9a36-7086c176846d",
    "metadata": {
     "ExecuteTime": {
@@ -114,32 +114,9 @@
      "start_time": "2024-08-22T14:10:02.135638Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function percentiles101 in module diive.pkgs.analyses.quantiles:\n",
-      "\n",
-      "percentiles101(series: pandas.core.series.Series, showplot: bool = True, verbose: bool = True) -> pandas.core.frame.DataFrame\n",
-      "    Calculate percentiles 0-100 for series.\n",
-      "    \n",
-      "    Args:\n",
-      "        series: Input series.\n",
-      "        showplot: Shows plot of percentiles 0-100 if *True*.\n",
-      "        verbose: Prints some percentiles if *True*.\n",
-      "    \n",
-      "    Returns:\n",
-      "        Dataframe with percentiles 0-100 for *series*.\n",
-      "    \n",
-      "    - Example notebook available in:\n",
-      "        notebooks/Analyses/Percentiles.ipynb\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(percentiles101)"
+    "# help(percentiles101)"
    ]
   },
   {
@@ -160,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b8df9b16-1f15-4a57-b475-83f417815538",
    "metadata": {
     "ExecuteTime": {
@@ -173,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.038 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.055 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -194,7 +171,7 @@
        "Freq: 30min, Name: Tair_f, Length: 175296, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f97b0670-5a15-46a6-961f-ab439252bf5a",
    "metadata": {
     "ExecuteTime": {
@@ -249,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1d0d90b2-1c8d-4443-ac7e-1c87c99fc5af",
    "metadata": {
     "ExecuteTime": {
@@ -294,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "bf7985bc-d334-49ca-bae3-4a3d75fe1aa0",
    "metadata": {
     "ExecuteTime": {
@@ -406,7 +383,7 @@
        "[101 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "858aa379-5643-4afe-b53f-eb370dee2835",
    "metadata": {
     "ExecuteTime": {
@@ -449,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-09-19 21:33:31\n"
+      "Finished 2024-10-24 13:39:25\n"
      ]
     }
    ],
@@ -488,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.10"
   },
   "toc-autonumbering": false
  },
