--- a/notebooks/Stats/TimeSeriesStats.ipynb
+++ b/notebooks/Stats/TimeSeriesStats.ipynb
@@ -40,14 +40,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "98a0b6ed-8f83-4519-b23f-a13453dff0a1",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:45:08.592739Z",
      "start_time": "2024-08-22T13:45:06.250756Z"
-    }
+    },
+    "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diive version: v0.83.2\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib.metadata\n",
     "from datetime import datetime\n",
@@ -55,17 +65,7 @@
     "from diive.core.dfun.stats import sstats\n",
     "version_diive = importlib.metadata.version(\"diive\")\n",
     "print(f\"diive version: v{version_diive}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "diive version: v0.79.0\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,25 +77,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "d6a8a136-b0da-44e5-989a-2f23e3109e79",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:45:08.843705Z",
      "start_time": "2024-08-22T13:45:08.675614Z"
-    }
+    },
+    "tags": []
    },
-   "source": [
-    "data_df = load_exampledata_parquet()\n",
-    "series = data_df['NEE_CUT_REF_orig']\n",
-    "series"
-   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.073 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.053 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -121,7 +117,11 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "source": [
+    "data_df = load_exampledata_parquet()\n",
+    "series = data_df['NEE_CUT_REF_orig']\n",
+    "series"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,19 +133,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "0783bda1-e410-42f0-a4c6-be64000852e9",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:45:09.017294Z",
      "start_time": "2024-08-22T13:45:08.971417Z"
-    }
+    },
+    "tags": []
    },
+   "outputs": [],
    "source": [
     "results = sstats(s=series)"
-   ],
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,43 +157,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "c90d528e-9415-46d4-9eea-030c265e65f3",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:45:09.127489Z",
      "start_time": "2024-08-22T13:45:09.104550Z"
-    }
+    },
+    "tags": []
    },
-   "source": [
-    "results"
-   ],
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "                NEE_CUT_REF_orig\n",
-       "STARTDATE       2013-01-01 00:15\n",
-       "ENDDATE         2022-12-31 23:45\n",
-       "PERIOD        3651 days 23:30:00\n",
-       "NOV                        58197\n",
-       "MISSING                   117099\n",
-       "MISSING_PERC           66.800726\n",
-       "MEAN                   -3.653027\n",
-       "MEDIAN                     -3.18\n",
-       "SD                      6.249538\n",
-       "VAR                     39.05672\n",
-       "SD/MEAN                -1.710783\n",
-       "SUM                  -212595.211\n",
-       "MIN                      -40.811\n",
-       "MAX                        25.29\n",
-       "P01                     -20.5502\n",
-       "P05                      -14.229\n",
-       "P25                       -7.556\n",
-       "P75                         0.63\n",
-       "P95                       5.5102\n",
-       "P99                      10.9462"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -300,6 +275,29 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                NEE_CUT_REF_orig\n",
+       "STARTDATE       2013-01-01 00:15\n",
+       "ENDDATE         2022-12-31 23:45\n",
+       "PERIOD        3651 days 23:30:00\n",
+       "NOV                        58197\n",
+       "MISSING                   117099\n",
+       "MISSING_PERC           66.800726\n",
+       "MEAN                   -3.653027\n",
+       "MEDIAN                     -3.18\n",
+       "SD                      6.249538\n",
+       "VAR                     39.05672\n",
+       "SD/MEAN                -1.710783\n",
+       "SUM                  -212595.211\n",
+       "MIN                      -40.811\n",
+       "MAX                        25.29\n",
+       "P01                     -20.5502\n",
+       "P05                      -14.229\n",
+       "P25                       -7.556\n",
+       "P75                         0.63\n",
+       "P95                       5.5102\n",
+       "P99                      10.9462"
       ]
      },
      "execution_count": 4,
@@ -307,7 +305,9 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "source": [
+    "results"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,31 +321,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "id": "52d47c35-eda2-4bb5-9b2b-1faedb4fb43c",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2024-08-22T13:45:09.190766Z",
      "start_time": "2024-08-22T13:45:09.175877Z"
-    }
+    },
+    "tags": []
    },
-   "source": [
-    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "print(f\"Finished {dt_string}\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-08-22 15:45:09\n"
+      "Finished 2024-10-25 00:20:29\n"
      ]
     }
    ],
-   "execution_count": 5
+   "source": [
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "b9900f7d-1bd3-4aa3-bd9a-33a8e3557678",
    "metadata": {
     "ExecuteTime": {
@@ -353,9 +354,8 @@
      "start_time": "2024-08-22T13:45:09.247626Z"
     }
    },
-   "source": [],
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
