--- a/notebooks/TimeStamps/Detect_time_resolution.ipynb
+++ b/notebooks/TimeStamps/Detect_time_resolution.ipynb
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.82.1\n"
+      "diive version: v0.83.2\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.045 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.057 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
       "   Detected 30min time resolution with MAXIMUM confidence.\n",
       "   All approaches yielded the same result:\n",
       "       from full data = 30min / full data (OK)\n",
-      "       from timedelta = 30min / >90% occurrence (OK)\n",
+      "       from timedelta = 30min / 100% occurrence (OK)\n",
       "       from progressive = 30min / data 1000+1000 (OK)\n",
       "\n"
      ]
@@ -200,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-09-20 11:50:15\n"
+      "Finished 2024-10-24 17:40:17\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
