--- a/notebooks/Analyses/DailyCorrelation.ipynb
+++ b/notebooks/Analyses/DailyCorrelation.ipynb
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.82.1\n"
+      "diive version: v0.83.2\n"
      ]
     }
    ],
@@ -117,36 +117,9 @@
      "start_time": "2024-08-22T14:06:13.611453Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function daily_correlation in module diive.pkgs.analyses.correlation:\n",
-      "\n",
-      "daily_correlation(s1: pandas.core.series.Series, s2: pandas.core.series.Series, mincorr: float = 0.8, showplot: bool = False) -> pandas.core.series.Series\n",
-      "    Calculate daily correlation between two time series.\n",
-      "    \n",
-      "    Args:\n",
-      "        s1: any time series, timestamp must overlap with *s2*\n",
-      "        s2: any time series, timestamp must overlap with *s1*\n",
-      "        mincorr: minimum absolute correlation, only relevant when *showplot=True*,\n",
-      "            must be between -1 and 1 (inclusive)\n",
-      "            Example: with *0.8* all correlations between -0.8 and +0.8 are considered low,\n",
-      "            and all correlations smaller than -0.8 and higher than +0.8 are considered high.\n",
-      "        showplot: if *True*, show plot of results\n",
-      "    \n",
-      "    Returns:\n",
-      "        series with correlations for each day\n",
-      "    \n",
-      "    - Example notebook available in:\n",
-      "        notebooks/Analyses/DailyCorrelation.ipynb\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(daily_correlation)"
+    "# help(daily_correlation)"
    ]
   },
   {
@@ -180,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.064 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.055 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -1207,7 +1180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-09-19 18:16:32\n"
+      "Finished 2024-10-24 13:38:48\n"
      ]
     }
    ],
@@ -1246,7 +1219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.10"
   },
   "toc-autonumbering": false
  },
