Added BinFitterCP notebook

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 30 Sep 2024  \n",
+    "**Last updated**: 7 Nov 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -117,6 +117,31 @@
   {
    "cell_type": "markdown",
    "id": "20ebc30d-ef5d-4328-801a-673f6fd1e444",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77b38e75-178a-44c5-88a9-fb205c39633c",
+   "metadata": {},
+   "source": [
+    "# **Fits**\n",
+    "Fit functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef05062b-d379-4509-b02b-f9e6978c1083",
+   "metadata": {},
+   "source": [
+    "- <b>NEW!</b> [BinFitterCP](Fits/BinFitterCP.ipynb): Fit function to binned data, including confidence and prediction interval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4adc37cc-b4c6-41d9-918b-bd451f329bb7",
    "metadata": {},
    "source": [
     "</br>"
